force-app/main/default/objects/NEOS_Matter__c/fields/All_Staff__c.field-meta.xml
<CustomField>
    <fullName>All_Staff__c</fullName>
    <label>All Staff</label>
    <length>255</length>
    <type>Text</type>
</CustomField>