force-app/main/default/objects/NEOS_Matter__c/fields/ApprovedAttorneyFees__c.field-meta.xml
<CustomField>
    <fullName>ApprovedAttorneyFees__c</fullName>
    <label>Approved Attorney Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>