force-app/main/default/objects/NEOS_Matter__c/fields/ArbBriefDue__c.field-meta.xml
<CustomField>
    <fullName>ArbBriefDue__c</fullName>
    <label>Arb Brief Due</label>
    <type>Date</type>
</CustomField>