force-app/main/default/objects/NEOS_Matter__c/fields/Arbitration__c.field-meta.xml
<CustomField>
    <fullName>Arbitration__c</fullName>
    <label>Arbitration</label>
    <type>Date</type>
</CustomField>