force-app/main/default/objects/NEOS_Matter__c/fields/Assigned_to_Settlement_Team__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Settlement_Team__c</fullName>
    <label>Assigned to Settlement Team</label>
    <type>Date</type>
</CustomField>