force-app/main/default/objects/NEOS_Matter__c/fields/Associate_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Associate_Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associate Attorney</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>equals</operation>
            <value>Associate Attorney</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>NEOS_Matters2</relationshipName>
    <type>Lookup</type>
</CustomField>