force-app/main/default/objects/NEOS_Matter__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <externalId>true</externalId>
    <label>Case #</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>