force-app/main/default/objects/NEOS_Matter__c/fields/Case_Rating__c.field-meta.xml
<CustomField>
    <fullName>Case_Rating__c</fullName>
    <label>Case Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(A) Best</fullName>
            </value>
            <value>
                <fullName>(B) Neutral</fullName>
            </value>
            <value>
                <fullName>(C) Worst</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>