force-app/main/default/objects/NEOS_Matter__c/fields/Case_Rating_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Case_Rating_Explanation__c</fullName>
    <label>Case Rating Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>