force-app/main/default/objects/NEOS_Matter__c/fields/Case_Title__c.field-meta.xml
<CustomField>
    <fullName>Case_Title__c</fullName>
    <label>Case Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>