force-app/main/default/objects/NEOS_Matter__c/fields/ClassListReceived__c.field-meta.xml
<CustomField>
    <fullName>ClassListReceived__c</fullName>
    <label>Class List - Received?</label>
    <type>Date</type>
</CustomField>