force-app/main/default/objects/NEOS_Matter__c/fields/ClassListReceivedNotes__c.field-meta.xml
<CustomField>
    <fullName>ClassListReceivedNotes__c</fullName>
    <label>Class List - Received? (Notes)</label>
    <type>TextArea</type>
</CustomField>