force-app/main/default/objects/NEOS_Matter__c/fields/ClassListRequested__c.field-meta.xml
<CustomField>
    <fullName>ClassListRequested__c</fullName>
    <label>Class List - Requested?</label>
    <type>Date</type>
</CustomField>