force-app/main/default/objects/NEOS_Matter__c/fields/ClassListRequestedNotes__c.field-meta.xml
<CustomField>
    <fullName>ClassListRequestedNotes__c</fullName>
    <label>Class List - Requested? (Notes)</label>
    <type>TextArea</type>
</CustomField>