force-app/main/default/objects/NEOS_Matter__c/fields/ClassTimePayRecordReceivedNotes__c.field-meta.xml
<CustomField>
    <fullName>ClassTimePayRecordReceivedNotes__c</fullName>
    <label>Class Time/Pay Record - Received?(Notes)</label>
    <type>TextArea</type>
</CustomField>