force-app/main/default/objects/NEOS_Matter__c/fields/ClassTimePayRecordRequestedNotes__c.field-meta.xml
<CustomField>
    <fullName>ClassTimePayRecordRequestedNotes__c</fullName>
    <label>Class Time/Pay Record -Requested?(Notes)</label>
    <type>TextArea</type>
</CustomField>