force-app/main/default/objects/NEOS_Matter__c/fields/ClassTimePayRecordsReceived__c.field-meta.xml
<CustomField>
    <fullName>ClassTimePayRecordsReceived__c</fullName>
    <label>Class Time/Pay Records - Received?</label>
    <type>Date</type>
</CustomField>