force-app/main/default/objects/NEOS_Matter__c/fields/ClassTimePayRecordsRequested__c.field-meta.xml
<CustomField>
    <fullName>ClassTimePayRecordsRequested__c</fullName>
    <label>Class Time/Pay Records - Requested?</label>
    <type>Date</type>
</CustomField>