force-app/main/default/objects/NEOS_Matter__c/fields/ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>ClosedDate__c</fullName>
    <label>Closed</label>
    <type>Date</type>
</CustomField>