force-app/main/default/objects/NEOS_Matter__c/fields/Companion_Matter_Count__c.field-meta.xml
<CustomField>
    <fullName>Companion_Matter_Count__c</fullName>
    <label>Companion Matter Count</label>
    <summaryForeignKey>TREO_Companion_Matter__c.Matter__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>