force-app/main/default/objects/NEOS_Matter__c/fields/Complaint_Filed_Date__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Filed_Date__c</fullName>
    <label>Complaint Filed Date</label>
    <type>Date</type>
</CustomField>