force-app/main/default/objects/NEOS_Matter__c/fields/Court_Jurisdiction_Status__c.field-meta.xml
<CustomField>
    <fullName>Court_Jurisdiction_Status__c</fullName>
    <formula>IF(
    ISPICKVAL(CourtJurisdiction__c, &quot;Federal&quot;),
    IMAGE(&quot;/resource/1746557478000/GraphicsPackNew/silk/16/silk/building.png&quot;, &quot;Federal Court&quot;),
    IMAGE(&quot;/resource/1746557478000/GraphicsPackNew/tangodesktopproject/16/theme/go-home.png&quot;, &quot;State Court&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Court Jurisdiction Status</label>
    <type>Text</type>
</CustomField>