force-app/main/default/objects/NEOS_Matter__c/fields/CourtJurisdiction__c.field-meta.xml
<CustomField>
    <fullName>CourtJurisdiction__c</fullName>
    <label>Jurisdiction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>Arbitration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>