force-app/main/default/objects/NEOS_Matter__c/fields/D_Law_Fees__c.field-meta.xml
<CustomField>
    <fullName>D_Law_Fees__c</fullName>
    <label>D.Law Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>