force-app/main/default/objects/NEOS_Matter__c/fields/DateAgreedToSettle__c.field-meta.xml
<CustomField>
    <fullName>DateAgreedToSettle__c</fullName>
    <label>Date Agreed to Settle</label>
    <type>Date</type>
</CustomField>