force-app/main/default/objects/NEOS_Matter__c/fields/DefensesWeakness__c.field-meta.xml
<CustomField>
    <fullName>DefensesWeakness__c</fullName>
    <label>Defenses/Weakness</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>