force-app/main/default/objects/NEOS_Matter__c/fields/DelArbitrationCaseNumber2__c.field-meta.xml
<CustomField>
    <fullName>DelArbitrationCaseNumber2__c</fullName>
    <label>Del Arbitration Case Number 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>