force-app/main/default/objects/NEOS_Matter__c/fields/DelArbitrationCaseNumber3__c.field-meta.xml
<CustomField>
    <fullName>DelArbitrationCaseNumber3__c</fullName>
    <label>Del Arbitration Case Number 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>