force-app/main/default/objects/NEOS_Matter__c/fields/DelArbitrationCaseNumber__c.field-meta.xml
<CustomField>
    <fullName>DelArbitrationCaseNumber__c</fullName>
    <label>Del Arbitration Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>