force-app/main/default/objects/NEOS_Matter__c/fields/DelArbitrationInitiationDate2__c.field-meta.xml
<CustomField>
    <fullName>DelArbitrationInitiationDate2__c</fullName>
    <label>Del Arbitration Initiation Date 2</label>
    <type>Date</type>
</CustomField>