force-app/main/default/objects/NEOS_Matter__c/fields/DelArbitrationInitiationDate3__c.field-meta.xml
<CustomField>
    <fullName>DelArbitrationInitiationDate3__c</fullName>
    <label>Del Arbitration Initiation Date 3</label>
    <type>Date</type>
</CustomField>