force-app/main/default/objects/NEOS_Matter__c/fields/DelArbitrationInitiationDate__c.field-meta.xml
<CustomField>
    <fullName>DelArbitrationInitiationDate__c</fullName>
    <label>Del Arbitration Initiation Date</label>
    <type>Date</type>
</CustomField>