force-app/main/default/objects/NEOS_Matter__c/fields/DelCase_Type__c.field-meta.xml
<CustomField>
    <fullName>DelCase_Type__c</fullName>
    <label>Del Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DLaw Class Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>