force-app/main/default/objects/NEOS_Matter__c/fields/DelClass__c.field-meta.xml
<CustomField>
    <fullName>DelClass__c</fullName>
    <label>Del Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arbitration</fullName>
            </value>
            <value>
                <fullName>Bl Settled | Pending PD</fullName>
            </value>
            <value>
                <fullName>Client MIA</fullName>
            </value>
            <value>
                <fullName>Co-Counsel</fullName>
            </value>
            <value>
                <fullName>Collecting B&amp;R</fullName>
            </value>
            <value>
                <fullName>Coverage Inves</fullName>
            </value>
            <value>
                <fullName>Demand In Process</fullName>
            </value>
            <value>
                <fullName>Demand Negotiation</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Dropped</fullName>
            </value>
            <value>
                <fullName>In Suit</fullName>
            </value>
            <value>
                <fullName>Investigation</fullName>
            </value>
            <value>
                <fullName>Pending copy of file - SOA</fullName>
            </value>
            <value>
                <fullName>Pre-Filing Stage</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
            <value>
                <fullName>Sub&apos;d Out</fullName>
            </value>
            <value>
                <fullName>TCR Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>