force-app/main/default/objects/NEOS_Matter__c/fields/DelClosed__c.field-meta.xml
<CustomField>
    <fullName>DelClosed__c</fullName>
    <label>Del Closed #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>