force-app/main/default/objects/NEOS_Matter__c/fields/DelFile__c.field-meta.xml
<CustomField>
    <fullName>DelFile__c</fullName>
    <label>Del File #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>