force-app/main/default/objects/NEOS_Matter__c/fields/DelHow_did_you_hear_about_us__c.field-meta.xml
<CustomField>
    <fullName>DelHow_did_you_hear_about_us__c</fullName>
    <label>Del How did you hear about us?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>West LA Migration</fullName>
            </value>
            <value>
                <fullName>Walter Haines</fullName>
            </value>
            <value>
                <fullName>Toby Rosen - Marketing</fullName>
            </value>
            <value>
                <fullName>Soren Leads</fullName>
            </value>
            <value>
                <fullName>SK Law Firm</fullName>
            </value>
            <value>
                <fullName>Sahag Majarian</fullName>
            </value>
            <value>
                <fullName>Ruben Limonyan</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Manukyan Law Firm</fullName>
            </value>
            <value>
                <fullName>Jonathan P. LaCour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>