force-app/main/default/objects/NEOS_Matter__c/fields/DelMore_Information__c.field-meta.xml
<CustomField>
    <fullName>DelMore_Information__c</fullName>
    <label>Del More Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>