force-app/main/default/objects/NEOS_Matter__c/fields/DelPhone_Formatted__c.field-meta.xml
<CustomField>
    <fullName>DelPhone_Formatted__c</fullName>
    <formula>DelPrimary_Party__r.Phone_Standardized__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Del Phone Formatted</label>
    <type>Text</type>
</CustomField>