force-app/main/default/objects/NEOS_Matter__c/fields/DelPrimary_Party__c.field-meta.xml
<CustomField>
    <fullName>DelPrimary_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Del Primary Party</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>NEOS_Matters</relationshipName>
    <type>Lookup</type>
</CustomField>