force-app/main/default/objects/NEOS_Matter__c/fields/DelStaff__c.field-meta.xml
<CustomField>
    <fullName>DelStaff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Del Staff</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NEOS_Matters</relationshipName>
    <type>Lookup</type>
</CustomField>