force-app/main/default/objects/NEOS_Matter__c/fields/DepartmentFederal__c.field-meta.xml
<CustomField>
    <fullName>DepartmentFederal__c</fullName>
    <label>Department (Federal)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>