force-app/main/default/objects/NEOS_Matter__c/fields/DepartmentState__c.field-meta.xml
<CustomField>
    <fullName>DepartmentState__c</fullName>
    <label>Department (State)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>