force-app/main/default/objects/NEOS_Matter__c/fields/DepoScheduledFor__c.field-meta.xml
<CustomField>
    <fullName>DepoScheduledFor__c</fullName>
    <label>Depo Scheduled For</label>
    <type>Date</type>
</CustomField>