force-app/main/default/objects/NEOS_Matter__c/fields/Deposition__c.field-meta.xml
<CustomField>
    <fullName>Deposition__c</fullName>
    <label>Deposition</label>
    <type>Date</type>
</CustomField>