force-app/main/default/objects/NEOS_Matter__c/fields/DepoTaken__c.field-meta.xml
<CustomField>
    <fullName>DepoTaken__c</fullName>
    <label>Depo Taken</label>
    <type>Date</type>
</CustomField>