force-app/main/default/objects/NEOS_Matter__c/fields/DiscoveryCutOff__c.field-meta.xml
<CustomField>
    <fullName>DiscoveryCutOff__c</fullName>
    <label>Discovery Cut Off</label>
    <type>Date</type>
</CustomField>