force-app/main/default/objects/NEOS_Matter__c/fields/DispositiveMotions__c.field-meta.xml
<CustomField>
    <fullName>DispositiveMotions__c</fullName>
    <label>Dispositive Motions</label>
    <type>Date</type>
</CustomField>