force-app/main/default/objects/NEOS_Matter__c/fields/DLawSClassRepS__c.field-meta.xml
<CustomField>
    <fullName>DLawSClassRepS__c</fullName>
    <label>D.Law&apos;s Class Rep(s)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>