force-app/main/default/objects/NEOS_Matter__c/fields/ENE_Date_Held__c.field-meta.xml
<CustomField>
    <fullName>ENE_Date_Held__c</fullName>
    <label>ENE Date Held</label>
    <type>Date</type>
</CustomField>