force-app/main/default/objects/NEOS_Matter__c/fields/ENE_Notes__c.field-meta.xml
<CustomField>
    <fullName>ENE_Notes__c</fullName>
    <label>ENE Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>