force-app/main/default/objects/NEOS_Matter__c/fields/ENE_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>ENE_Requested_Date__c</fullName>
    <label>ENE Requested Date</label>
    <type>Date</type>
</CustomField>