force-app/main/default/objects/NEOS_Matter__c/fields/FederalDocket__c.field-meta.xml
<CustomField>
    <fullName>FederalDocket__c</fullName>
    <label>Federal Docket #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>