force-app/main/default/objects/NEOS_Matter__c/fields/FEHA_SOL_Close__c.field-meta.xml
<CustomField>
    <fullName>FEHA_SOL_Close__c</fullName>
    <formula>AND(
FEHA_SOL_Date__c  &gt;= TODAY(),
FEHA_SOL_Date__c &lt;= TODAY() + 90
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FEHA/WT SOL Close</label>
    <type>Checkbox</type>
</CustomField>