force-app/main/default/objects/NEOS_Matter__c/fields/FEHA_SOL_Countdown__c.field-meta.xml
<CustomField>
    <fullName>FEHA_SOL_Countdown__c</fullName>
    <formula>IF( ( FEHA_SOL_Date__c - TODAY()) = 1

, &quot;1 Day Until FEHA/WT SOL Expires&quot;

, TEXT( FEHA_SOL_Date__c - TODAY() ) &amp; &quot; Days until FEHA/WT SOL Expires&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FEHA/WT SOL Countdown</label>
    <type>Text</type>
</CustomField>