force-app/main/default/objects/NEOS_Matter__c/fields/FEHA_SOL_Date__c.field-meta.xml
<CustomField>
    <fullName>FEHA_SOL_Date__c</fullName>
    <label>FEHA/WT SOL Date</label>
    <type>Date</type>
</CustomField>