force-app/main/default/objects/NEOS_Matter__c/fields/FEHA_WT_SOL_Satisfied__c.field-meta.xml
<CustomField>
    <fullName>FEHA_WT_SOL_Satisfied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FEHA/WT SOL Satisfied?</label>
    <type>Checkbox</type>
</CustomField>