force-app/main/default/objects/NEOS_Matter__c/fields/Final_Approval_Order_Signed__c.field-meta.xml
<CustomField>
    <fullName>Final_Approval_Order_Signed__c</fullName>
    <label>Final Approval Order Signed</label>
    <type>Date</type>
</CustomField>