force-app/main/default/objects/NEOS_Matter__c/fields/FinalApprovalHearing__c.field-meta.xml
<CustomField>
    <fullName>FinalApprovalHearing__c</fullName>
    <label>Final Approval Hearing</label>
    <type>Date</type>
</CustomField>