force-app/main/default/objects/NEOS_Matter__c/fields/Hearing__c.field-meta.xml
<CustomField>
    <fullName>Hearing__c</fullName>
    <label>Hearing</label>
    <type>Date</type>
</CustomField>