force-app/main/default/objects/NEOS_Matter__c/fields/IndSettlementAmntFEHAAddOn__c.field-meta.xml
<CustomField>
    <fullName>IndSettlementAmntFEHAAddOn__c</fullName>
    <label>Ind. Settlement Amnt - FEHA/Add-on</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>