force-app/main/default/objects/NEOS_Matter__c/fields/IsClosed__c.field-meta.xml
<CustomField>
    <fullName>IsClosed__c</fullName>
    <formula>NOT ISNULL( ClosedDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsClosed</label>
    <type>Checkbox</type>
</CustomField>