force-app/main/default/objects/NEOS_Matter__c/fields/JPA__c.field-meta.xml
<CustomField>
    <fullName>JPA__c</fullName>
    <label>JPA</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>