force-app/main/default/objects/NEOS_Matter__c/fields/Last_Day_Worked__c.field-meta.xml
<CustomField>
    <fullName>Last_Day_Worked__c</fullName>
    <label>Last Day Worked</label>
    <type>Date</type>
</CustomField>