force-app/main/default/objects/NEOS_Matter__c/fields/LSS_Paralegal__c.field-meta.xml
<CustomField>
    <fullName>LSS_Paralegal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LSS/Paralegal</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NEOS_Matters5</relationshipName>
    <type>Lookup</type>
</CustomField>