force-app/main/default/objects/NEOS_Matter__c/fields/LWDA__c.field-meta.xml
<CustomField>
    <fullName>LWDA__c</fullName>
    <label>LWDA #</label>
    <length>80</length>
    <type>Text</type>
</CustomField>