force-app/main/default/objects/NEOS_Matter__c/fields/Matter_Name__c.field-meta.xml
<CustomField>
    <fullName>Matter_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Id,  Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matter Name</label>
    <type>Text</type>
</CustomField>