force-app/main/default/objects/NEOS_Matter__c/fields/Mediation__c.field-meta.xml
<CustomField>
    <fullName>Mediation__c</fullName>
    <label>Mediation</label>
    <type>Date</type>
</CustomField>