force-app/main/default/objects/NEOS_Matter__c/fields/MotionsHearing__c.field-meta.xml
<CustomField>
    <fullName>MotionsHearing__c</fullName>
    <label>Motions Hearing</label>
    <type>Date</type>
</CustomField>