force-app/main/default/objects/NEOS_Matter__c/fields/MotionsInLimine__c.field-meta.xml
<CustomField>
    <fullName>MotionsInLimine__c</fullName>
    <label>Motions in Limine</label>
    <type>Date</type>
</CustomField>