force-app/main/default/objects/NEOS_Matter__c/fields/MOUSigned__c.field-meta.xml
<CustomField>
    <fullName>MOUSigned__c</fullName>
    <label>MOU Signed</label>
    <type>Date</type>
</CustomField>