force-app/main/default/objects/NEOS_Matter__c/fields/MTC_Deadline__c.field-meta.xml
<CustomField>
    <fullName>MTC_Deadline__c</fullName>
    <label>MTC Deadline</label>
    <type>Date</type>
</CustomField>