force-app/main/default/objects/NEOS_Matter__c/fields/Neos_Number__c.field-meta.xml
<CustomField>
    <fullName>Neos_Number__c</fullName>
    <displayFormat>TM-{00000}</displayFormat>
    <label>TREO Number</label>
    <type>AutoNumber</type>
</CustomField>