force-app/main/default/objects/NEOS_Matter__c/fields/Next_Hearing_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Next_Hearing_Deadline__c</fullName>
    <label>Next Hearing/Deadline</label>
    <type>Date</type>
</CustomField>