force-app/main/default/objects/NEOS_Matter__c/fields/NumberOfPayPeriodsPAGA__c.field-meta.xml
<CustomField>
    <fullName>NumberOfPayPeriodsPAGA__c</fullName>
    <label>Number of Pay Periods (PAGA)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>