force-app/main/default/objects/NEOS_Matter__c/fields/NumberOfWorkweeksClass__c.field-meta.xml
<CustomField>
    <fullName>NumberOfWorkweeksClass__c</fullName>
    <label>Number of Workweeks (Class)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>