force-app/main/default/objects/NEOS_Matter__c/fields/Opened__c.field-meta.xml
<CustomField>
    <fullName>Opened__c</fullName>
    <label>Opened</label>
    <type>Date</type>
</CustomField>