force-app/main/default/objects/NEOS_Matter__c/fields/OtherActionsReceived__c.field-meta.xml
<CustomField>
    <fullName>OtherActionsReceived__c</fullName>
    <label>Other Actions - Received?</label>
    <type>Date</type>
</CustomField>