force-app/main/default/objects/NEOS_Matter__c/fields/OtherActionsReceivedNotes__c.field-meta.xml
<CustomField>
    <fullName>OtherActionsReceivedNotes__c</fullName>
    <label>Other Actions - Received? (Notes)</label>
    <type>TextArea</type>
</CustomField>