force-app/main/default/objects/NEOS_Matter__c/fields/OtherActionsRequested__c.field-meta.xml
<CustomField>
    <fullName>OtherActionsRequested__c</fullName>
    <label>Other Actions - Requested?</label>
    <type>Date</type>
</CustomField>