force-app/main/default/objects/NEOS_Matter__c/fields/OtherActionsRequestedNotes__c.field-meta.xml
<CustomField>
    <fullName>OtherActionsRequestedNotes__c</fullName>
    <label>Other Actions - Requested? (Notes)</label>
    <type>TextArea</type>
</CustomField>