force-app/main/default/objects/NEOS_Matter__c/fields/OtherDiscoveryReceived__c.field-meta.xml
<CustomField>
    <fullName>OtherDiscoveryReceived__c</fullName>
    <label>Other Discovery - Received?</label>
    <type>Date</type>
</CustomField>