force-app/main/default/objects/NEOS_Matter__c/fields/OtherDiscoveryReceivedNotes__c.field-meta.xml
<CustomField>
    <fullName>OtherDiscoveryReceivedNotes__c</fullName>
    <label>Other Discovery - Received? (Notes)</label>
    <type>TextArea</type>
</CustomField>