force-app/main/default/objects/NEOS_Matter__c/fields/OtherDiscoveryRequested__c.field-meta.xml
<CustomField>
    <fullName>OtherDiscoveryRequested__c</fullName>
    <label>Other Discovery - Requested?</label>
    <type>Date</type>
</CustomField>