force-app/main/default/objects/NEOS_Matter__c/fields/OtherDiscoveryRequestedNotes__c.field-meta.xml
<CustomField>
    <fullName>OtherDiscoveryRequestedNotes__c</fullName>
    <label>Other Discovery - Requested? (Notes)</label>
    <type>TextArea</type>
</CustomField>