force-app/main/default/objects/NEOS_Matter__c/fields/PerWorkweekClass__c.field-meta.xml
<CustomField>
    <fullName>PerWorkweekClass__c</fullName>
    <label>$ Per Workweek (Class)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>