force-app/main/default/objects/NEOS_Matter__c/fields/PerWorkweekPAGA__c.field-meta.xml
<CustomField>
    <fullName>PerWorkweekPAGA__c</fullName>
    <label>$ per Workweek (PAGA)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>