force-app/main/default/objects/NEOS_Matter__c/fields/PlaintiffSDocsReceived__c.field-meta.xml
<CustomField>
    <fullName>PlaintiffSDocsReceived__c</fullName>
    <label>Plaintiff&apos;s Docs - Received?</label>
    <type>Date</type>
</CustomField>