force-app/main/default/objects/NEOS_Matter__c/fields/PlaintiffSDocsReceivedNotes__c.field-meta.xml
<CustomField>
    <fullName>PlaintiffSDocsReceivedNotes__c</fullName>
    <label>Plaintiff&apos;s Docs - Received? (Notes)</label>
    <type>TextArea</type>
</CustomField>