force-app/main/default/objects/NEOS_Matter__c/fields/PlaintiffsDocsRequested__c.field-meta.xml
<CustomField>
    <fullName>PlaintiffsDocsRequested__c</fullName>
    <label>Plaintiffs Docs - Requested?</label>
    <type>Date</type>
</CustomField>