force-app/main/default/objects/NEOS_Matter__c/fields/PlantiffSDocsRequestedNotes__c.field-meta.xml
<CustomField>
    <fullName>PlantiffSDocsRequestedNotes__c</fullName>
    <label>Plantiff&apos;s Docs - Requested? (Notes)</label>
    <type>TextArea</type>
</CustomField>