force-app/main/default/objects/NEOS_Matter__c/fields/PMQDepoReceivedNotes__c.field-meta.xml
<CustomField>
    <fullName>PMQDepoReceivedNotes__c</fullName>
    <label>PMQ Depo - Received? (Notes)</label>
    <type>TextArea</type>
</CustomField>