force-app/main/default/objects/NEOS_Matter__c/fields/PMQDepoRequestedNotes__c.field-meta.xml
<CustomField>
    <fullName>PMQDepoRequestedNotes__c</fullName>
    <label>PMQ Depo - Requested? (Notes)</label>
    <type>TextArea</type>
</CustomField>