force-app/main/default/objects/NEOS_Matter__c/fields/PMQScheduledFor__c.field-meta.xml
<CustomField>
    <fullName>PMQScheduledFor__c</fullName>
    <label>PMQ Scheduled For</label>
    <type>Date</type>
</CustomField>