force-app/main/default/objects/NEOS_Matter__c/fields/PMQTaken__c.field-meta.xml
<CustomField>
    <fullName>PMQTaken__c</fullName>
    <label>PMQ Taken</label>
    <type>Date</type>
</CustomField>