force-app/main/default/objects/NEOS_Matter__c/fields/PostPMQDiscoveryReceived__c.field-meta.xml
<CustomField>
    <fullName>PostPMQDiscoveryReceived__c</fullName>
    <label>Post PMQ Discovery - Received?</label>
    <type>Date</type>
</CustomField>