force-app/main/default/objects/NEOS_Matter__c/fields/PostPMQDiscoveryReceivedNotes__c.field-meta.xml
<CustomField>
    <fullName>PostPMQDiscoveryReceivedNotes__c</fullName>
    <label>Post PMQ Discovery - Received? (Notes)</label>
    <type>TextArea</type>
</CustomField>