force-app/main/default/objects/NEOS_Matter__c/fields/PostPMQDiscoveryRequested__c.field-meta.xml
<CustomField>
    <fullName>PostPMQDiscoveryRequested__c</fullName>
    <label>Post PMQ Discovery - Requested?</label>
    <type>Date</type>
</CustomField>