force-app/main/default/objects/NEOS_Matter__c/fields/PostPMQDiscoveryRequestedNotes__c.field-meta.xml
<CustomField>
    <fullName>PostPMQDiscoveryRequestedNotes__c</fullName>
    <label>Post PMQ Discovery - Requested? (Notes)</label>
    <type>TextArea</type>
</CustomField>