force-app/main/default/objects/NEOS_Matter__c/fields/Preliminary_Approval_Order_Signed__c.field-meta.xml
<CustomField>
    <fullName>Preliminary_Approval_Order_Signed__c</fullName>
    <label>Preliminary Approval Order Signed</label>
    <type>Date</type>
</CustomField>