force-app/main/default/objects/NEOS_Matter__c/fields/PreliminaryApprovalHearing__c.field-meta.xml
<CustomField>
    <fullName>PreliminaryApprovalHearing__c</fullName>
    <label>Preliminary Approval Hearing</label>
    <type>Date</type>
</CustomField>