force-app/main/default/objects/NEOS_Matter__c/fields/ProceduralStatusNextSteps__c.field-meta.xml
<CustomField>
    <fullName>ProceduralStatusNextSteps__c</fullName>
    <label>Procedural Status/Next Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>