force-app/main/default/objects/NEOS_Matter__c/fields/ProspectsForClassCertification__c.field-meta.xml
<CustomField>
    <fullName>ProspectsForClassCertification__c</fullName>
    <label>Prospects for Class Certification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>