force-app/main/default/objects/NEOS_Matter__c/fields/Reassigned__c.field-meta.xml
<CustomField>
    <fullName>Reassigned__c</fullName>
    <label>Reassigned</label>
    <type>Date</type>
</CustomField>