force-app/main/default/objects/NEOS_Matter__c/fields/RemandedToStateCourt__c.field-meta.xml
<CustomField>
    <fullName>RemandedToStateCourt__c</fullName>
    <label>Remanded to State Court</label>
    <type>Date</type>
</CustomField>