force-app/main/default/objects/NEOS_Matter__c/fields/RemovedToFederalCourt__c.field-meta.xml
<CustomField>
    <fullName>RemovedToFederalCourt__c</fullName>
    <label>Removed to Federal Court</label>
    <type>Date</type>
</CustomField>