force-app/main/default/objects/NEOS_Matter__c/fields/RepTimePayRecordReceivedNotes__c.field-meta.xml
<CustomField>
    <fullName>RepTimePayRecordReceivedNotes__c</fullName>
    <label>Rep Time/Pay Record - Received? (Notes)</label>
    <type>TextArea</type>
</CustomField>