force-app/main/default/objects/NEOS_Matter__c/fields/RepTimePayRecordRequestedNotes__c.field-meta.xml
<CustomField>
    <fullName>RepTimePayRecordRequestedNotes__c</fullName>
    <label>Rep Time/Pay Record - Requested? (Notes)</label>
    <type>TextArea</type>
</CustomField>