force-app/main/default/objects/NEOS_Matter__c/fields/RepTimePayRecordsReceived__c.field-meta.xml
<CustomField>
    <fullName>RepTimePayRecordsReceived__c</fullName>
    <label>Rep Time/Pay Records - Received?</label>
    <type>Date</type>
</CustomField>