force-app/main/default/objects/NEOS_Matter__c/fields/RepTimePayRecordsRequested__c.field-meta.xml
<CustomField>
    <fullName>RepTimePayRecordsRequested__c</fullName>
    <label>Rep Time/Pay Records - Requested?</label>
    <type>Date</type>
</CustomField>