force-app/main/default/objects/NEOS_Matter__c/fields/RequestedAttorneyFees__c.field-meta.xml
<CustomField>
    <fullName>RequestedAttorneyFees__c</fullName>
    <label>Requested Attorney Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>