force-app/main/default/objects/NEOS_Matter__c/fields/RequestedPolicyChanges__c.field-meta.xml
<CustomField>
    <fullName>RequestedPolicyChanges__c</fullName>
    <label>Requested Policy Changes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>